Implement GET request for two school AUNs

--- a/unitedUmbrella/app/views/main/welcome.html.erb
+++ b/unitedUmbrella/app/views/main/welcome.html.erb
@@ -77,13 +77,13 @@
 
 				<!-- COMPARE TWO PUBLIC SCHOOLS BASED ON LEA -->
 				<h4>View two schools</h4>
-				<form method="get" action="/public_lea/show">
+				<form method="get" action="/public_lea/viewschools">
 					<div class="row uniform">
 						<div class="6u 12u$(xsmall)">
-							<input type="text" name="aun" value="" placeholder="AUN of first school" />
+							<input type="text" name="id1" value="" placeholder="AUN of first school" />
 						</div>
 						<div class="6u$ 12u$(xsmall)">
-							<input type="email" name="aun2" value="" placeholder="AUN of second school" />
+							<input type="email" name="id2" value="" placeholder="AUN of second school" />
 						</div>
 						<br>
 						<ul class="actions">
