Mike 4. d3 test code.

--- a/unitedUmbrella/app/views/public_lea/index.html.erb
+++ b/unitedUmbrella/app/views/public_lea/index.html.erb
@@ -1,6 +1,9 @@
 <h1>PublicLea#index</h1>
 <p>Find me in app/views/public_lea/index.html.erb</p>
 <p>
+<div id="graph1">
+</div>
+<%= javascript_include_tag('public_lea.js') %>
 <table>
 <tr>
 <th>aun</th>
