--- a/unitedUmbrella/app/views/public_lea/index.html.erb
+++ b/unitedUmbrella/app/views/public_lea/index.html.erb
@@ -1,23 +1,25 @@
-<h1>PublicLea#index</h1>
-<p>Find me in app/views/public_lea/index.html.erb</p>
-<p>
-<div id="graph1">
-</div>
-<%= javascript_include_tag('public_lea.js') %>
-<table>
-<tr>
-<th>aun</th>
-<th>lea_name</th>
-<th>lea_type</th>
-<th>county</th>
-</tr>
-<% @leas.each do | l | %>
-<tr>
-<td><%= l.aun  %></td>
-<td><%= l.lea_name %><br></td>
-<td><%= l.lea_type %><br></td>
-<td><%= l.county %><br></td>
-</tr>
-<% end %>
-</table>
-</p>
+<section class="wrapper style5">
+	<div class="inner">
+		<p>
+			<div id="graph1">
+			</div>
+			<%= javascript_include_tag('public_lea.js') %>
+			<table>
+				<tr>
+					<th>aun</th>
+					<th>lea_name</th>
+					<th>lea_type</th>
+					<th>county</th>
+				</tr>
+				<% @leas.each do | l | %>
+				<tr>
+					<td><%= l.aun  %></td>
+					<td><%= l.lea_name %><br></td>
+					<td><%= l.lea_type %><br></td>
+					<td><%= l.county %><br></td>
+				</tr>
+				<% end %>
+			</table>
+		</p>
+	</div>
+</section>
