Add labels to bar chart in public_lea

--- a/unitedUmbrella/app/views/public_lea/index.html.erb
+++ b/unitedUmbrella/app/views/public_lea/index.html.erb
@@ -4,10 +4,10 @@
 		<p>
 			<table>
 				<tr>
-					<th>aun</th>
-					<th>lea_name</th>
-					<th>lea_type</th>
-					<th>county</th>
+					<th>AUN</th>
+					<th>LEA Name</th>
+					<th>LEA Type</th>
+					<th>County</th>
 				</tr>
 				<% @leas.each do | l | %>
 				<tr>
