Handle the case when user submits empty form

--- a/unitedUmbrella/app/views/main/welcome.html.erb
+++ b/unitedUmbrella/app/views/main/welcome.html.erb
@@ -41,7 +41,7 @@
 			<form method="get" action="main/view_public_by_aun">
 				<div class="row uniform">
 					<div class="12u 12u$(xsmall)">
-						<input type="text" name="id" value="" placeholder="AUN of school" />
+						<input type="text" name="aun" value="" placeholder="AUN of school" />
 					</div>
 					<ul class="actions">
 							<li>
@@ -70,7 +70,7 @@
 
 
 			<form method="get" action="/public_lea/viewschools">
-				<div class="row uniform" id="multiple_schools_input">						
+				<div class="row uniform" id="multiple_schools_input">
 				</div>
 				<br>
 				<div class="row uniform">
