--- a/unitedUmbrella/app/views/public_lea/index.html.erb
+++ b/unitedUmbrella/app/views/public_lea/index.html.erb
@@ -24,14 +24,7 @@
 
 
 <script type="text/javascript">
- var lea_type = ["CS","SD","IU","OCCCTC","SJCI","COMCTC","STATE","SPJ"];
- lea_type[0] = <%= @lea_type["CS"] %>;
- lea_type[1] = <%= @lea_type["SD"] %>;
- lea_type[2] = <%= @lea_type["IU"] %>;
- lea_type[3] = <%= @lea_type["OCCCTC"] %>;
- lea_type[4] = <%= @lea_type["SJCI"] %>;
- lea_type[5] = <%= @lea_type["COMCTC"] %>;
- lea_type[6] = <%= @lea_type["STATE"] %>;
- lea_type[7] = <%= @lea_type["SPJ"] %>;
- render_graph(lea_type);
+ var lea_data = <%= raw @lea_map.values %>;
+ var lea_labels = <%= raw @lea_map.keys %>;
+ render_graph(lea_data, lea_labels);
 </script>
