--- a/unitedUmbrella/app/views/public_lea/index.html.erb
+++ b/unitedUmbrella/app/views/public_lea/index.html.erb
@@ -1,4 +1,4 @@
-<section class="wrapper style5">
+v<section class="wrapper style5">
 	<div class="inner">
 		<div id="graph1"></div>
 		<p>
@@ -117,3 +117,45 @@ function labelEndpointsPosition( xOffset, columnWidth, columnInterval, numberOfC
  var lea_labels = <%= raw @lea_map.keys %>;
  draw_graph(lea_data, lea_labels);
 </script>
+
+//Contains code used to draw pie chart based on asessment data. Found on GitHub
+<div id="piechart"></div>
+    <script src="d3.v4.min.js"></script>
+    <script>
+      (function(d3) {
+        'use strict';
+
+        var dataset = [ //Example dataset
+          { label: 'Abulia', count: 10 },
+          { label: 'Betelgeuse', count: 20 },
+          { label: 'Cantaloupe', count: 30 },
+          { label: 'Dijkstra', count: 40 }
+        ];
+
+        var width = 360;
+        var height = 360;
+        var radius = Math.min(width, height) / 2;
+        var color = d3.scaleOrdinal(d3.schemeCategory20b);
+        var svg = d3.select('#chart')
+          .append('svg')
+          .attr('width', width)
+          .attr('height', height)
+          .append('g')
+          .attr('transform', 'translate(' + (width / 2) +
+            ',' + (height / 2) + ')');
+        var arc = d3.arc()
+          .innerRadius(0)
+          .outerRadius(radius);
+        var pie = d3.pie()
+          .value(function(d) { return d.count; })
+          .sort(null);
+        var path = svg.selectAll('path')
+          .data(pie(dataset))
+          .enter()
+          .append('path')
+          .attr('d', arc)
+          .attr('fill', function(d) {
+            return color(d.data.label);
+          });
+      })(window.d3);
+    </script>
