--- a/unitedUmbrella/app/views/public_lea/show.html.erb
+++ b/unitedUmbrella/app/views/public_lea/show.html.erb
@@ -1,20 +1,60 @@
-<% unless @invalid_auns.empty? %>
-<%= show_error_message("The following AUNs do not exist:\n" + @invalid_auns.join("\n")) %>
-<% else %>
-<p>
-	<table>
-		<tr>
-			<th>aun</th>
-			<th>lea_name</th>
-			<th>lea_type</th>
-			<th>county</th>
-		</tr>
-		<tr>
-			<td><%= @lea.aun  %></td>
-			<td><%= @lea.lea_name %><br></td>
-			<td><%= @lea.lea_type %><br></td>
-			<td><%= @lea.county %><br></td>
-		</tr>
-	</table>
-</p>
-<% end %>
+<section class="wrapper style5">
+	<div class="inner">
+		<% unless @invalid_auns.empty? %>
+		<%= show_error_message("The following AUNs do not exist:\n" + @invalid_auns.join("\n")) %>
+		<% else %>
+		<p>
+			<div id="graph"></div>
+			<table>
+				<tr>
+					<th>aun</th>
+					<th>lea_name</th>
+					<th>lea_type</th>
+					<th>county</th>
+				</tr>
+				<tr>
+					<td><%= @lea.aun  %></td>
+					<td><%= @lea.lea_name %><br></td>
+					<td><%= @lea.lea_type %><br></td>
+					<td><%= @lea.county %><br></td>
+				</tr>
+			</table>
+		</p>
+		<% end %>
+	</div>
+</section>
+
+<script>
+    var dataset = [ //Example dataset
+      { label: 'Abulia', count: 10 },
+      { label: 'Betelgeuse', count: 20 },
+      { label: 'Cantaloupe', count: 30 },
+      { label: 'Dijkstra', count: 40 }
+    ];
+
+    var width = 360;
+    var height = 360;
+    var radius = Math.min(width, height) / 2;
+    var color = d3.scaleOrdinal(d3.schemeCategory20b);
+    var svg = d3.select('#graph')
+      .append('svg')
+      .attr('width', width)
+      .attr('height', height)
+      .append('g')
+      .attr('transform', 'translate(' + (width / 2) +
+        ',' + (height / 2) + ')');
+    var arc = d3.arc()
+      .innerRadius(0)
+      .outerRadius(radius);
+    var pie = d3.pie()
+      .value(function(d) { return d.count; })
+      .sort(null);
+    var path = svg.selectAll('path')
+      .data(pie(dataset))
+      .enter()
+      .append('path')
+      .attr('d', arc)
+      .attr('fill', function(d) {
+        return color(d.data.label);
+      });
+</script>
